--- a/serverless-distribution.yml
+++ b/serverless-distribution.yml
@@ -6,7 +6,7 @@ provider:
 
 resources:
   Resources:
-   
+
     # the origin Identity that we will use in S3, to only allow a specific cloudfront distribution
     # access to the S3 content, to keep S3 private
     CloudFrontIdentity:
@@ -37,7 +37,7 @@ resources:
           IPV6Enabled: true
           PriceClass: PriceClass_All
           Origins:
-            - DomainName: !Join 
+            - DomainName: !Join
               - ''
               - - !Ref MyS3Bucket
                 - .s3.amazonaws.com
@@ -58,9 +58,9 @@ resources:
     MyS3Bucket:
       Type: AWS::S3::Bucket
       Properties:
-        BucketName: replacewithyourbucketname
+        BucketName: tony-ssr-test
 
-    # the policy that grants access to S3 to only the cloudfront origin identity 
+    # the policy that grants access to S3 to only the cloudfront origin identity
     MyS3BucketPolicy:
       Type: AWS::S3::BucketPolicy
       Properties:
@@ -71,7 +71,7 @@ resources:
             Principal:
               AWS: !Sub "arn:aws:iam::cloudfront:user/CloudFront Origin Access Identity ${CloudFrontIdentity}"
             Action: "s3:GetObject"
-            Resource: !Join 
+            Resource: !Join
               - ''
               - - 'arn:aws:s3:::'
                 - !Ref MyS3Bucket
